:sparkles: (stylelint-config-base) Add husky

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "url": "git@github.com:com:containator/stylelint-config-base.git"
   },
   "scripts": {
-    "lint:fix": "eslint . --ext .js --fix"
+    "lint:fix": "eslint . --ext .js --fix",
+    "prepare": "husky install"
   },
   "version": "1.0.0"
 }
